
[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "network"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.3"
pyo3-asyncio = {version = "0.20.0",features = ["tokio-runtime"]}
anyhow = "1.0.86"
clap = "4.5.4"
libp2p = {version = "0.53.2", features = ["identify", "request-response", "cbor","tokio", "noise", "macros", "tcp", "yamux", "quic","serde"]}
tokio = {version = "1.38.0" , features = ["full"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.30"
rand = "0.8.5"
tracing = "0.1.40"
async-trait = "0.1.80"
lazy_static = "1.4.0"
serde = "1.0.203"
serde_json = "1.0.117"
base64 = "0.22.1"
parking_lot = "0.12.3"
colorful = "0.2.2"
